[package]
name = "adventOfCode2020"
version = "0.1.0"
authors = ["Charles Schleich <schleich.cdaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="day1"
path="./src/day1.rs"


# [lib]
# name="libday1"
# path="./src/libday1.rs"


[dependencies]




[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false